Tweaked usercontrols (button/shape/IOField) and created trendview with simulated data

--- a/TwinCAT HMI Project IMD/Themes/Kremer/Style.css
+++ b/TwinCAT HMI Project IMD/Themes/Kremer/Style.css
@@ -31,3 +31,8 @@ html {
     font-style: normal;
     font-weight: normal;
 }
+
+@font-face {
+    font-family: Helvetica;
+    src: url(../../Fonts/HelveticaNeueLTStd-Bd.otf);
+} 
