Usermanagement usercontrol, function 'ConvertAlarmDBToDataGrid', global ccs class, global function from 'code behind'

--- a/TwinCAT HMI Project IMD/Themes/Kremer/Style.css
+++ b/TwinCAT HMI Project IMD/Themes/Kremer/Style.css
@@ -36,3 +36,7 @@ html {
     font-family: Helvetica;
     src: url(../../Fonts/HelveticaNeueLTStd-Bd.otf);
 } 
+
+.tchmi-class-error {
+    border: 2px solid red !important;
+}
