Centered controls with the help of the new 'center' class. Given the 'TextInputField' UC a text value to read back from

--- a/TwinCAT HMI Project IMD/Themes/Kremer/Style.css
+++ b/TwinCAT HMI Project IMD/Themes/Kremer/Style.css
@@ -40,3 +40,14 @@ html {
 .tchmi-class-error {
     border: 2px solid red !important;
 }
+
+.tchmi-class-parent {
+    position: relative;
+}
+
+.tchmi-class-center {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
