Removed .parent class since this caused the Combobox controls to no longer show their dropdown options

--- a/TwinCAT HMI Project IMD/Themes/Kremer/Style.css
+++ b/TwinCAT HMI Project IMD/Themes/Kremer/Style.css
@@ -41,9 +41,9 @@ html {
     border: 2px solid red !important;
 }
 
-.tchmi-class-parent {
+/*.tchmi-class-parent {
     position: relative;
-}
+}*/
 
 .tchmi-class-center {
     position: absolute;
